Fix: Make modal overlay's z-index less than modal's z-index
In some scenarios, like when you add the overlay before the modal, the modal comes behind the overlay. Making the overlay's z-index less than the modal fixes this issue.

--- a/src/cdn/elements/overlays.css
+++ b/src/cdn/elements/overlays.css
@@ -8,7 +8,7 @@
   height: 100%;
   color: var(--on-background);
   background-color: var(--overlay);
-  z-index: 100;
+  z-index: 95;
   will-change: opacity;
   transition: var(--speed3) all;
 }
